# raytrace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
samples/: CMakeLists.txt  cornell_box.cpp  cornell_box.json  junkyard.cpp  marbles.cpp  two_spheres.json
samples/cornell_box/: CMakeLists.txt  cornell_box.cpp
samples/json/: cornell_box.json  junkyard.json  two_spheres.json
src/: aabb.cpp  aabb.h  aarect.cpp  aarect.h  box.cpp  box.h  builderattr.cpp  builderattr.h  bvhnode.cpp  bvhnode.h  camera.cpp  camera.h  checkertexture.cpp  checkertexture.h  color.cpp  color.h  common.cpp  common.h  constantmedium.cpp  constantmedium.h  cosinepdf.cpp  cosinepdf.h  hitrecord.cpp  hitrecord.h  hittable.h  hittablelist.cpp  hittablelist.h  hittablepdf.cpp  hittablepdf.h  hittables.h  image.cpp  image.h  jsonparser.cpp  jsonparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mat3.cpp  mat3.h  materials.h  (+31 more)
src/hittables/: aarect.cpp  aarect.h  box.cpp  box.h  bvhnode.cpp  bvhnode.h  constantmedium.cpp  constantmedium.h  flipface.cpp  flipface.h  hittable.h  hittablelist.cpp  hittablelist.h  rotate.cpp  rotate.h  rotatey.cpp  rotatey.h  sphere.cpp  sphere.h  translate.cpp  translate.h
src/materials/: dielectric.cpp  dielectric.h  diffuselight.cpp  diffuselight.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
src/textures/: checkertexture.cpp  checkertexture.h  imagetexture.cpp  imagetexture.h  noisetexture.h  perlin.cpp  perlin.h  solidcolor.cpp  solidcolor.h
